--- a/src/main/webapp/styles.css
+++ b/src/main/webapp/styles.css
@@ -106,15 +106,16 @@ ul {
 li {
     margin: 0.75rem 0;
     padding: 0.5rem 0;
-    display: flex;
-    align-items: center;
+    /* display: flex; */
+    /* align-items: center; */
 }
 
 li a {
     color: var(--secondary);
     text-decoration: none;
     font-weight: 500;
-    flex-grow: 1;
+    /*flex-grow: 1;*/
+    display: block;
     padding: 0.75rem 1rem;
     background-color: white;
     border-radius: 5px;
@@ -176,7 +177,7 @@ nav li {
 nav a {
     display: block;
     padding: 0.75rem 1rem;
-    color: var (--dark);
+    color: var(--dark);
     text-decoration: none;
     border-left: 3px solid transparent;
     transition: all 0.2s ease;
@@ -289,7 +290,7 @@ nav a:hover {
 
 /* Note page styling */
 .noteContent, .noteTitle {
-    white-space: pre-wrap;
+    /* white-space: pre-wrap; */
 }
 
 /* Delete button styling */
